# corporate_intel

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AFTER_RESTART_CHECKLIST.md  AGENT_INSTRUCTIONS.md  BUG_REPORT_TEMPLATE.md  CLAUDE.md  DOCKER_INFRASTRUCTURE_SUMMARY.md  Dockerfile  Dockerfile.dev  Makefile  QUICK_START.md  README.md  SECURITY.md  SPARC_SETUP.md  STARTUP_STATUS.md  TESTING_NOTES.md  TESTING_README.md  TEST_DATA.md  USER_TESTING_CHECKLIST.md  USER_TESTING_GUIDE.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  flow-nexus-quickstart.js  nul  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py  verify_env.js
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci-cd.yml  deploy.yml  docker.yml  test-migrations.yml  tests.yml
.hive-mind/: config.json
alembic/: env.py
alembic/versions/: 001_initial_schema_with_timescaledb.py  002_add_composite_indexes.py  003_enable_query_monitoring.py
bugs/: README.md
completion_reports/: project_completion_report.md
config/: .env.production.template  aws_secrets_integration.py  docker-compose.yml  nginx-ssl.conf  nginx.conf  prometheus.yml  vault_integration.py
config/production/: .env.production.template  alpha-vantage-config.yml  docker-compose.production.yml  nginx.conf  sec-api-config.yml  traefik-dynamic.yml  traefik.yml
daily_dev_startup_reports/: 2025-10-10_dev_startup_report.md  2025-10-16_dev_startup_report.md  2025-10-16_evening_dev_startup_report.md  2025-10-17_comprehensive_startup_report.md  2025-10-17_startup_report.md  2025-11-18_startup_report.md
daily_reports/: 2025-10-03.md  2025-10-04.md  2025-10-05.md  2025-10-06.md  2025-10-07.md  2025-10-08.md  2025-10-12.md  2025-10-16.md  COMPLETE_HISTORY.md  README.md
daily_reports/2025-09-14/: DAILY_SUMMARY.md
daily_reports/2025-09-15/: DAILY_SUMMARY.md
daily_reports/2025-09-16/: DAILY_SUMMARY.md
daily_reports/2025-09-17/: DAILY_SUMMARY.md
daily_reports/2025-09-18/: DAILY_SUMMARY.md
daily_reports/2025-09-19/: DAILY_SUMMARY.md
daily_reports/2025-09-20/: DAILY_SUMMARY.md
daily_reports/2025-09-21/: DAILY_SUMMARY.md
daily_reports/2025-09-22/: DAILY_SUMMARY.md
daily_reports/2025-09-23/: DAILY_SUMMARY.md
daily_reports/2025-09-24/: DAILY_SUMMARY.md
daily_reports/2025-09-25/: DAILY_SUMMARY.md
daily_reports/2025-09-26/: DAILY_SUMMARY.md
daily_reports/2025-09-27/: DAILY_SUMMARY.md
daily_reports/2025-09-28/: DAILY_SUMMARY.md
daily_reports/2025-09-29/: DAILY_SUMMARY.md
daily_reports/2025-09-30/: DAILY_SUMMARY.md
daily_reports/2025-10-01/: DAILY_SUMMARY.md
daily_reports/2025-10-02/: DAILY_SUMMARY.md
daily_reports/2025-10-03/: DAILY_SUMMARY.md
daily_reports/2025-10-04/: DAILY_SUMMARY.md
daily_reports/2025-10-05/: COMMIT_BREAKDOWN.md  DAILY_SUMMARY.md  README.md  VISUAL_ANALYSIS.md
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
docs/: ALEMBIC_IMPLEMENTATION_SUMMARY.md  ALPHA_VANTAGE_PRODUCTION_SUMMARY.md  API_QUICK_REFERENCE.md  API_SETUP_GUIDE.md  APPLICATION_READINESS_REPORT.md  BEFORE_AFTER_DASHBOARD.md  COLOR_IMPROVEMENTS.md  CONFIGURATION_FIXES.md  DASHBOARD_ASYNC_FIX.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_MODERNIZATION.md  DASHBOARD_QUICK_START.md  DASH_ASYNC_FIX.md  DATABASE_MIGRATION_STRATEGY.md  DATA_SOURCES_STRATEGY_REPORT.md  DEEP_DIVE_EVALUATION.md  DEPENDENCY_INSTALLATION.md  DEPENDENCY_ISSUES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS_QUICK_REFERENCE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_READINESS_2025-10-08.md  DEPLOYMENT_VISUAL_GUIDE.md  DEPLOYMENT_WALKTHROUGH.md  DISASTER_RECOVERY.md  DOCKERFILE_REVIEW.md  DOCKER_BUILD_INSTRUCTIONS.md  DOCKER_BUILD_REPORT.md  DOCKER_BUILD_SUMMARY.md  DOCKER_DESKTOP_ISSUE_REPORT.md  DOCKER_GUIDE.md  DTO_IMPLEMENTATION_SUMMARY.md  DTO_LAYER_IMPLEMENTATION.md  ENABLE_FEATURES.md  EVALUATION_REPORT.md  FILE_ORGANIZATION_NOTES.md  FUNCTIONALITY_REVIEW.md  GETTING_STARTED.md  GET_STARTED_TODAY.md  HONEST_EVALUATION.md  (+77 more)
gx/: README.md
init_scripts/: 01_init_db.sql
k8s/: api-deployment.yaml  namespace.yaml  postgres.yaml
memory/: claude-flow@alpha-data.json  memory-store.json
scripts/: README_INGESTION.md  add_performance_indexes.sql  alpha_vantage_daily.bat  alpha_vantage_daily.sh  apply_indexes.bat  apply_indexes.sh  backup.sh  bootstrap_test_data.py  check-migrations.sh  check-python-version.ps1  check-python-version.sh  coverage_check.sh  deploy-api.sh  deploy-infrastructure.sh  deploy-new-dashboard.bat  deploy-new-dashboard.sh  deploy-production.sh  deploy-staging.sh  docker-entrypoint.sh  docker-security-scan.sh  env_manager.py  generate_ssl_cert.sh  health-check.sh  health-dashboard.sh  ingest_historical_data.py  init-db-simple.sql  init-db.sh  init-db.sql  init-docker-db.sh  launch-app.sh  monitoring-setup.sh  performance_baseline.py  quick-stability-check.sh  quick-start.sh  quick-startup.bat  quick-startup.sh  quick_db_test.py  restore.sh  resume-startup.bat  resume-startup.sh  (+36 more)
secrets/: vault-config.hcl
src/: __init__.py  config.py
tests/: QUICK_TEST_REFERENCE.md  TEST_COVERAGE_REPORT.md  TEST_SUITE_README.md  TEST_SUMMARY_REPORT.md  auth_service_test_fix_summary.md  conftest.py  pytest.ini  run_comprehensive_tests.sh  smoke_test_comprehensive.py  test_alpha_vantage_retry.py  test_api_integration.py  test_async_pattern.py  test_auth.py  test_dash_db_connection.py  test_dash_sync_simple.py  test_dashboard_async.py  test_dashboard_db_connection.py  test_dashboard_simple.py  test_dashboard_ui.py  test_sec_company_lookup.py  test_services.py  verify_dashboard_fix.py  verify_refactoring.py
(+491 files in other folders)
